0.02
 - Rename CHANGES to Changes.

0.01 (February 26, 2013)
 - First version.